--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.13",
+    "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.160.0",
     "next": "14.0.4",
+    "postprocessing": "^6.34.1",
     "react": "^18",
     "react-dom": "^18",
     "react-joystick-component": "^6.2.1",
