--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.13",
     "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.160.0",
+    "@vercel/analytics": "^1.1.1",
     "next": "14.0.4",
     "postprocessing": "^6.34.1",
     "react": "^18",
