--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/three": "^0.160.0",
     "@use-gesture/react": "^10.3.0",
     "@vercel/analytics": "^1.1.1",
+    "jotai": "^2.6.3",
     "next": "14.0.4",
     "postprocessing": "^6.34.1",
     "react": "^18",
@@ -23,6 +24,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
