--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postprocessing": "^6.34.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^4.4.4",
     "react-joystick-component": "^6.2.1",
     "three": "^0.160.0"
   },
