--- a/package.json
+++ b/package.json
@@ -9,29 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.13",
-    "@react-three/postprocessing": "^2.15.11",
-    "@types/three": "^0.160.0",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
+  "@react-three/postprocessing": "^3.0.4",
     "@use-gesture/react": "^10.3.0",
     "@vercel/analytics": "^1.1.1",
     "jotai": "^2.6.3",
-    "next": "14.0.4",
-    "postprocessing": "^6.34.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hotkeys-hook": "^4.4.4",
+    "next": "15.4.6",
+    "postprocessing": "^6.37.7",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-hotkeys-hook": "^5.1.0",
     "react-joystick-component": "^6.2.1",
-    "three": "^0.160.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "15.4.6",
     "sass": "^1.69.7",
     "typescript": "^5"
+  },
+  "overrides": {
+  "three": "^0.179.1",
+  "postprocessing": "^6.37.7",
+  "@react-three/postprocessing": "^3.0.4",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7"
   }
 }
